--- a/main.html
+++ b/main.html
@@ -1,54 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Internship Form</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <!-- Bootstrap 5 CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
   <style>
-    .form-control:invalid ~ .invalid-feedback,
-    .form-select:invalid ~ .invalid-feedback,
-    .form-check-input:invalid ~ .invalid-feedback {
-      display: block;
+    .form-container {
+      max-width: 800px;
+      margin: 50px auto;
+      padding: 30px;
+      border: 1px solid #ddd;
+      border-radius: 10px;
     }
   </style>
 </head>
 <body>
-
-<div class="container mt-5">
-  <form class="p-4 border rounded" novalidate>
+  <div class="container form-container">
     <h3 class="text-center mb-4">Internship Form</h3>
-
-    <div class="row mb-3">
-      <div class="col">
+    <form class="row g-3 needs-validation" novalidate>
+      <div class="col-md-4">
         <label for="first-name-input" class="form-label">First Name</label>
-        <input type="text" class="form-control" id="first-name-input" required>
+        <input type="text" class="form-control" id="first-name-input" required />
         <div class="invalid-feedback">First name required!</div>
       </div>
-      <div class="col">
+
+      <div class="col-md-4">
         <label for="last-name-input" class="form-label">Last Name</label>
-        <input type="text" class="form-control" id="last-name-input" required>
+        <input type="text" class="form-control" id="last-name-input" required />
         <div class="invalid-feedback">Last name required!</div>
       </div>
-      <div class="col">
+
+      <div class="col-md-4">
         <label for="email-input" class="form-label">Email Address</label>
-        <input type="email" class="form-control" id="email-input" required>
+        <input type="email" class="form-control" id="email-input" required />
         <div class="invalid-feedback">Email required!</div>
       </div>
-    </div>
 
-    <div class="row mb-3">
-      <div class="col">
+      <div class="col-md-4">
         <label for="college-input" class="form-label">College</label>
-        <input type="text" class="form-control" id="college-input" required>
+        <input type="text" class="form-control" id="college-input" required />
         <div class="invalid-feedback">Please provide a valid college.</div>
       </div>
-      <div class="col">
-        <label for="graduation-year" class="form-label">Graduation Year</label>
-        <select class="form-select" id="graduation-year" required>
+
+      <div class="col-md-4">
+        <label for="grad-year-select" class="form-label">Graduation Year</label>
+        <select class="form-select" id="grad-year-select" required>
           <option value="">Choose...</option>
           <option>2020</option>
           <option>2021</option>
@@ -57,24 +54,29 @@
         </select>
         <div class="invalid-feedback">Please select a valid Graduation Year.</div>
       </div>
-      <div class="col">
+
+      <div class="col-md-4">
         <label for="roll-no-input" class="form-label">Roll No.</label>
-        <input type="text" class="form-control" id="roll-no-input" required>
+        <input type="text" class="form-control" id="roll-no-input" required />
         <div class="invalid-feedback">Please provide a valid Roll no.</div>
       </div>
-    </div>
 
-    <div class="form-check mb-3">
-      <input class="form-check-input" type="checkbox" id="conditions-checkbox" required>
-      <label class="form-check-label" for="conditions-checkbox">
-        Agree to terms and conditions
-      </label>
-      <div class="invalid-feedback">You must agree before submitting.</div>
-    </div>
+      <div class="col-12">
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" id="conditions-checkbox" required />
+          <label class="form-check-label" for="conditions-checkbox">
+            Agree to terms and conditions
+          </label>
+          <div class="invalid-feedback">You must agree before submitting.</div>
+        </div>
+      </div>
 
-    <button type="submit" class="btn btn-primary">Submit form</button>
-  </form>
-</div>
+      <div class="col-12">
+        <button class="btn btn-primary" type="submit">Submit form</button>
+      </div>
+    </form>
+  </div>
 
+  <!-- Optional Bootstrap validation JS (not required as per your request) -->
 </body>
 </html>
